2016-07-01  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Support longer line length.

	* src/worddef.h (MAXLEN, MAXSEP):
	  - Increase max line length and max words by 3 times,
	    to support longer paragraphs. We had better address this
	    with resizable buffers, but the change would be too deep
	    for now.

	* src/worddef.h (-MAXCHOICE, -MAXTAG):
	  - Drop unused macros.

	Thanks Santi Romeyen for the report via a personal e-mail.

2016-07-01  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Update dictionary from thailatex GitHub.

	* data/tdict-city.txt:
	* data/tdict-common.txt:
	* data/tdict-country.txt:
	* data/tdict-district.txt:
	* data/tdict-ict.txt:
	* data/tdict-lang-ethnic.txt:
	* data/tdict-proper.txt:
	* data/tdict-science.txt:
	* data/tdict-spell.txt:
	  - Update dictionary from dehyphenated source for thailatex
	    hyphenation patterns.

2016-06-21  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Interpret word break string using output encoding.

	As an adjustment to issue #1 fix, taking the word break string
	in output encoding should be more sensible to users than in
	input encoding, so s/he can directly specify the string to insert.

	* src/wordseg.cpp (main):
	  - Convert wbr depending on isUniOut instead of isUniIn.

2016-06-20  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Fix issue #1 - Support non-ASCII word break string.

	Word break string should be read & converted the same way
	input text is.

	* src/convutil.h, src/convutil.cpp (+ConvStrDup):
	  - Add ConvStrDup() utility for converting string in buffers.

	* src/filterx.h (wordBreakStr, GetWordBreak(), FilterX()):
	  - Change type of word break string from const char*
	    to const wchar_t*.
	* src/filterhtml.cpp:
	* src/filterlatex.h:
	* src/filterlatex.cpp:
	* src/filterlambda.h:
	* src/filterrtf.cpp:
	  - Change argument types accordingly.

	* src/wordseg.cpp (WordSegmentation):
	  - Change type of wbr from const char* to const wchar_t*.